--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "demo_app",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.4.1"
+  }
 }
